<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:paddingTop="30dp"
        android:background="@drawable/bg_bottom_dialog">

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="3"
                android:fontFamily="@font/numplex_font"
                android:gravity="center"
                android:text="@string/help"
                android:textColor="@color/numplex_blue"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/impedance_input"
                android:textColor="@color/text_color"
                android:background="@drawable/bg_complex_result_textview"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/ImpInput"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_textview_border_bottom"
                android:text="@string/ImpInputResult"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/complex_numbers"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:justificationMode="inter_word"
                android:text="@string/complexObs"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/polar_form_input"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/Polar"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_textview_border_bottom"
                android:text="@string/PolarResult"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/series_impedance"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/series"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_textview_border_bottom"
                android:text="@string/seriesResult"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/parallel_impedance"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/parallel"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_textview_border_bottom"
                android:text="@string/parallelResult"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Cap"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/cap_desc"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:textStyle="italic"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/cap"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_textview_border_bottom"
                android:text="@string/capResult"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Ind"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/ind_desc"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                android:textStyle="italic"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/ind"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_textview_border_bottom"
                android:text="@string/indResult"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/prefixes"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/prefix"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_textview_border_bottom"
                android:text="@string/prefixResult"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/scientific_notation_input"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/scientific"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_textview_border_bottom"
                android:text="@string/scientificResult"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/complex_number_calculations"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/complex"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_textview_border_bottom"
                android:text="@string/complexResult"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/precedenceWord"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/precedence"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_textview_border_bottom"
                android:text="@string/precedenceResult"
                android:textAlignment="textEnd"
                android:textColor="@color/text_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/more_result_formats"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:justificationMode="inter_word"
                android:text="@string/format"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
