<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rateContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/five_stars"
            app:lottie_speed="0.8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/numplex_font"
            android:text="@string/enjoying_our_app"
            android:textAlignment="center"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="20sp"
            android:autoSizeStepGranularity="2sp"
            android:textColor="@color/numplex_blue"
            android:textSize="30sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/numplex_font"
            android:text="@string/if_so_why_don_t_you_take_a_moment_to_rate_us"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="25sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/rateNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_now"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/ripple_effect_blue"
            android:fontFamily="@font/numplex_font" />

        <TextView
            android:id="@+id/later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/numplex_font"
            android:background="@drawable/ripple_effect"
            android:text="@string/ask_me_later"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/numplex_font"
            android:background="@drawable/ripple_effect"
            android:text="@string/never_ask_me_again"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="20sp" />

    </LinearLayout>
</RelativeLayout>